--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,8 +11,9 @@ body {
 /* main section */
 
 .main {
-	margin: 5vh 5vw;
-	width: 90vw;
-	height: 90vh;
+	margin: calc(50vh - 200px) auto;
+	height: 400px;
+	max-width: 800px;
 	background: #F5F5F5;
+	border-radius: 5px;
 }
