--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,8 +12,29 @@ body {
 
 .main {
 	margin: calc(50vh - 200px) auto;
+	padding: 3rem;
 	height: 400px;
 	max-width: 800px;
 	background: #F5F5F5;
 	border-radius: 5px;
+}
+
+.die-container {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	gap: 1rem;
+}
+
+.die {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 4rem;
+	height: 4rem;
+	background: white;
+	border-radius: 5px;
+	box-shadow: 0px 2px 2px 0px #BFBFBF;
+	font-family: Karla, serif;
+	font-size: 20pt;
 }
