--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,8 +11,11 @@ body {
 /* main section */
 
 .main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	margin: calc(50vh - 200px) auto;
-	padding: 3rem;
 	height: 400px;
 	max-width: 800px;
 	background: #F5F5F5;
@@ -37,4 +40,9 @@ body {
 	box-shadow: 0px 2px 2px 0px #BFBFBF;
 	font-family: Karla, serif;
 	font-size: 20pt;
+	user-select: none;
+}
+
+.die.held {
+	background: #59E391;
 }
