--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,10 @@
 }
 
 body {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
 	margin: 0;
 	background: #0B2434;
 }
@@ -15,16 +19,23 @@ h1 {
 
 /* main section */
 
+
 .main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	padding: 3rem;
-	margin: calc(50vh - 200px) auto;
-	max-width: 800px;
+	padding: 1rem;
+	max-width: 100%;
 	background: #F5F5F5;
 	border-radius: 5px;
+}
+
+@media (min-width: 420px) {
+	.main {
+		padding: 3rem;
+		max-width: 800px;
+	}
 }
 
 .title {
@@ -51,8 +62,8 @@ h1 {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 4rem;
-	height: 4rem;
+	width: 3rem;
+	height: 3rem;
 	background: white;
 	border-radius: 5px;
 	box-shadow: 0px 2px 2px 0px #BFBFBF;
